fixed applicant name missing from permit reports grid by moving to detailed dto from standard, following up on transition to new applicant name schema
